make new branch to work with ros melodic and PX4 sitl_gazebo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,15 +9,17 @@ find_package(catkin REQUIRED COMPONENTS
   cv_bridge
   gazebo_msgs
   geometry_msgs
-  mav_msgs
+  mavros_msgs
   trajectory_msgs
   nav_msgs
   tf
   std_srvs
+  gazebo_dev
+  camera_info_manager
 )
 
 find_package( OpenCV REQUIRED )
-find_package( gazebo REQUIRED)
+#find_package( gazebo REQUIRED)
 
 set( CMAKE_CXX_STANDARD 11) #needed in the benchmark manager and in the wind plugin
 set( CMAKE_EXPORT_COMPILE_COMMANDS ON ) #needed for Vim YouCompleteMe plugin
@@ -57,6 +59,22 @@ add_executable(noisy_realsense
 add_dependencies(noisy_realsense ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(noisy_realsense ${catkin_LIBRARIES} ${OpenCV_LIBS} )
 
+# ============================================== #
+# ============== REALSENSE PLUGIN ============== #
+# ============================================== #
+
+add_library(RealSensePlugin SHARED gazebo/gazebo_plugins/RealSensePlugin.cpp gazebo/gazebo_plugins/gazebo_ros_realsense.cpp)
+target_link_libraries(RealSensePlugin ${catkin_LIBRARIES})
+
+# ============================================== #
+# =========== WORLD CREATION PLUGIN ============ #
+# ============================================== #
+
+add_library(gazebo_world_creation_plugin SHARED gazebo/gazebo_plugins/gazebo_world_creation_plugin.cc)
+target_link_libraries(gazebo_world_creation_plugin
+  ${catkin_LIBRARIES}
+)
+
 
 # ============================================== #
 # ================= WIND PLUGIN ================ #
@@ -64,6 +82,6 @@ target_link_libraries(noisy_realsense ${catkin_LIBRARIES} ${OpenCV_LIBS} )
 link_directories(${GAZEBO_LIBRARY_DIRS})
 include_directories(include ${catkin_INCLUDE_DIRS} ${GAZEBO_INCLUDE_DIRS})
 
-add_library(boarr_gazebo_wind_plugin SHARED gazebo/gazebo_plugins/gazebo_wind_plugin.cc)
-target_link_libraries(boarr_gazebo_wind_plugin ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES})
-add_dependencies(boarr_gazebo_wind_plugin ${catkin_EXPORTED_TARGETS})
+#add_library(boarr_gazebo_wind_plugin SHARED gazebo/gazebo_plugins/gazebo_wind_plugin.cc)
+#target_link_libraries(boarr_gazebo_wind_plugin ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES})
+#add_dependencies(boarr_gazebo_wind_plugin ${catkin_EXPORTED_TARGETS})
