--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,7 @@
   <build_depend>image_transport</build_depend>
   <build_depend>gazebo_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>geographic_msgs</build_depend>
   <build_depend>mavros_msgs</build_depend>
   <build_depend>message_filters</build_depend>
   <build_depend>topic_tools</build_depend>
@@ -33,6 +34,7 @@
   <run_depend>image_transport</run_depend>
   <run_depend>gazebo_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
+  <run_depend>geographic_msgs</run_depend>
   <run_depend>mavros_msgs</run_depend>
   <run_depend>message_filters</run_depend>
   <run_depend>topic_tools</run_depend>
